data/derived/fa15/progs/unify/prog2216.ml.out
Characters 93-97:
  List.fold_left f base l
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b -> 'c -> 'd
